# genotrance-px

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  build.sh  px.ini  px.py  pyproject.toml  tools.py
.github/: FUNDING.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  ci.yml
docker/: Dockerfile  Dockerfile.heimdal-client  Dockerfile.heimdal-kdc  Dockerfile.mit-kdc  start.sh
docs/: architecture.md  build.md  changelog.md  configuration.md  index.md  installation.md  testing.md  usage.md
px/: config.py  debug.py  handler.py  help.py  kerberos.py  main.py  pac.py  version.py  windows.py  wproxy.py
tests/: conftest.py  fixtures.py  helpers.py  test_benchmark.py  test_config.py  test_debug.py  test_kerberos.py  test_large_data.py  test_network.py  test_pac.py  test_proxy.py  test_wproxy.py
