[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "px-proxy"
version = "0.11.0"
description = "An HTTP proxy server to automatically authenticate through an NTLM proxy"
authors = [
  {name = "Ganesh Viswanathan", email = "dev@genotrance.com"}
]
readme = "README.md"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Win32 (MS Windows)",
        "Environment :: MacOS X",
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Internet :: Proxy Servers"
]
dependencies = [
    "keyring",
    "keyrings.alt",
    "netaddr",
    "psutil",
    "pymcurl",
    "pyspnego",
    "python-dotenv",
    "quickjs-ng"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/genotrance/px"
Repository = "https://github.com/genotrance/px"
Issues = "https://github.com/genotrance/px/issues"

[project.scripts]
px = "px.main:main"

[project.gui-scripts]
pxw = "px.main:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-httpbin",
    "pytest-cov",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]

[tool.setuptools]
packages = ["px"]

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "binary"]

[tool.tox.env_run_base]
commands_pre = [["uv", "pip", "install", "keyring", "keyrings.alt", "psutil", "pytest", "pytest-cov", "pytest-xdist", "pytest-httpbin"]]
commands = [["pytest", "-n", "4", "tests"]]
passenv = ["DBUS_SESSION_BUS_ADDRESS", "UV_PYTHON_PREFERENCE", "PX_CI_MINIMAL"]

[tool.tox.env.binary]
passenv = ["PXBIN", "DBUS_SESSION_BUS_ADDRESS", "PX_CI_MINIMAL"]

[tool.mypy]
files = ["px"]
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["px.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E", "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["A001", "B011", "B018", "C901", "F403", "F405", "RUF005", "RUF059", "S101", "S105", "S602", "S605", "SIM105", "SIM115", "TRY003", "TRY300"]
# A001/A002: quit/exit shadow builtins (public API); C901: complex functions; E722/S110: intentional bare excepts; RUF012: mutable class default
"px/config.py" = ["A001", "A002", "C901", "E722", "RUF012", "S110"]
# A002: format param shadows builtin (BaseHTTPRequestHandler API); C901: complex functions; E402: import after monkey-patch; S324: md5 required by HTTP digest; SIM102/SIM108: readability
"px/handler.py" = ["A002", "C901", "E402", "S324", "SIM102", "SIM108"]
# A002: quit param shadows builtin; C901: complex test function; E722: intentional bare except; SIM102: readability
"px/main.py" = ["A002", "C901", "E722", "SIM102"]
# C901: complex Windows proxy detection functions
"px/wproxy.py" = ["C901"]
# E722/S110/SIM105: intentional bare excepts for resilient logging; SIM115: file lifecycle managed externally
"px/debug.py" = ["E722", "S110", "SIM105", "SIM115"]
# SIM115: file open lifecycle managed by caller
"px/windows.py" = ["SIM115"]
# Build/tools scripts use subprocess and shell commands
"tools.py" = ["C901", "E722", "S602", "S603", "S605", "S607", "SIM102", "SIM105", "SIM115", "TRY003"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["px"]
